add dafi's socials

--- a/index.html
+++ b/index.html
@@ -66,9 +66,8 @@
 					<h3>Univ. Indonesia</h3>					
 				</div>
 				<div class="social-media">
-					<a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-					<a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-					<a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+					<a href="https://www.linkedin.com/in/dafi-nafidz/"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+					<a href="https://github.com/ivanoxx"><i class="fa fa-github" aria-hidden="true"></i></a>
 				</div>
 			</div>
 			<div class="profile-card">
