link akun irfan

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 					<h3>UNTAG Surabaya</h3>					
 				</div>
 				<div class="social-media">
-					<a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-					<a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-					<a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+					<a href="https://www.linkedin.com/in/irfanwijaya/"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+					<a href="https://www.instagram.com/irffanwijaya"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+					<a href="https://github.com/irffanwijaya"><i class="fa fa-envelope" aria-hidden="true"></i></a>
 				</div>
 			</div>
 			<div class="profile-card">
