--- a/index.html
+++ b/index.html
@@ -24,14 +24,13 @@
 					<h3>UTDI Yogyakarta</h3>					
 				</div>
 				<div class="social-media">
-					<a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-					<a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-					<a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+					<a href="https://www.linkedin.com/in/novryeda/"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+					<a href="https://github.com/novryeda"><i class="fa fa-github" aria-hidden="true"></i></a>
 				</div>
 			</div>
 			<div class="profile-card">
 				<div class="profile-img">
-					<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQrmvSoqEMvs4E-TIgyfMdztZYEdKav-zok1A&s">
+					<img src="assets/picts/irfan.jpg">
 				</div>
 				<div class="profile-detail">
 					<h2>Irfan Wijaya</h2>
@@ -39,8 +38,7 @@
 				</div>
 				<div class="social-media">
 					<a href="https://www.linkedin.com/in/irfanwijaya/"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-					<a href="https://www.instagram.com/irffanwijaya"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-					<a href="https://github.com/irffanwijaya"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+					<a href="https://github.com/irffanwijaya"><i class="fa fa-github" aria-hidden="true"></i></a>
 				</div>
 			</div>
 			<div class="profile-card">
@@ -52,9 +50,8 @@
 					<h3>Univ Int. Batam</h3>					
 				</div>
 				<div class="social-media">
-					<a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-					<a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-					<a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+					<a href="https://www.linkedin.com/in/edric/"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+					<a href="https://github.com/Frtnzr"><i class="fa fa-github" aria-hidden="true"></i></a>
 				</div>
 			</div>
 			<div class="profile-card">
@@ -81,7 +78,6 @@
 				<div class="social-media">
 					<a href="https://www.linkedin.com/in/daffa-assyam-thariq-61a0b3180"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
 					<a href="https://github.com/at043"><i class="fa fa-github" aria-hidden="true"></i></a>
-					<a href="https://at043.github.io/profile"><i class="fa fa-globe" aria-hidden="true"></i></a>
 				</div>
 			</div>
 		</div>
