--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 					<h3>Univ Int. Batam</h3>					
 				</div>
 				<div class="social-media">
-					<a href="https://www.linkedin.com/in/edric/"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-					<a href="https://github.com/Frtnzr"><i class="fa fa-github" aria-hidden="true"></i></a>
+					<a href="https://www.linkedin.com/in/edric-fortunius-a4739a254/"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+					<a href="https://github.com/Frtzr"><i class="fa fa-github" aria-hidden="true"></i></a>
 				</div>
 			</div>
 			<div class="profile-card">
